2009-12-14  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Add an environment variable for
	  enabling sdb logging.

2009-12-14  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerEngine.cs:
	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Pass the message along to the
	  debugger log output about missing user assemblies or errors
	  getting assembly name.

2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Implement TryConvert.

2009-12-10  Geoff Norton  <gnorton@novell.com>

	* RemoteSoftDebuggerSession.cs: Only redirect the output when
	asked to do so.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Hide abstract properties. There is
	  nothing we can do with them.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerAdaptor.cs: Convert StructMirrors of type IntPtr
	  to real IntPtr objects.

2009-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SoftDebuggerSession.cs: Add support for external console.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Add an OnConnected virtual
	  method that subclasses can use to hook into when the app is
	  successfully started.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: Pass isError to OnTargetOutput.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs:
	* RemoteSoftDebuggerSession.cs: Add a fallback to try to kill
	  hung debugger processes.

2009-12-04  Michael Hutchinson  <mhutchinson@novell.com>

	* SoftDebuggerSession.cs: When pausing and picking a frame to
	  display, pick one with user code.

2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugger.Soft.dll:
	* Mono.Debugger.Soft.dll.mdb: Updated.
